# KilinGuard

docs/: requirements-4.2-mcp-ops-plugin-plan.md  requirements-4.3-safety-intent-plan.md
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/ops-plugin-sdk/: Cargo.toml
rust/crates/ops-plugin-sdk/src/: lib.rs
rust/crates/os-sense/: Cargo.toml
rust/crates/os-sense/src/: command.rs  context.rs  context_payload.rs  context_tests.rs  error.rs  http_probe.rs  lib.rs  logs.rs  model.rs  network.rs  procfs.rs  redaction.rs  runtime.rs  scheduler.rs  service_ports.rs  services.rs  storage.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: approval_tokens.rs  bash.rs  config.rs  config_validate.rs  conversation.rs  file_ops.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_lifecycle_hardened.rs  mcp_server.rs  mcp_stdio.rs  mcp_tool_bridge.rs  permission_enforcer.rs  permissions.rs  plugin_lifecycle.rs  safety_confirmation.rs  safety_intent.rs  safety_rules.rs  sandbox.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: output_format_contract.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
scripts/: verify-kylin-4x.sh
