[package]
name = "os-sense"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Read-only OS environment sensing collectors and context aggregation."

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
